litmask/tests/compile/mask_all_const_initializer_warning.stderr
error: use of deprecated constant `fixture::_LITMASK_SKIP_0`: litmask: skipped literal: const_initializer
  --> tests/compile/mask_all_const_initializer_warning.rs:11:1
   |
11 | #[mask_all]
   | ^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/compile/mask_all_const_initializer_warning.rs:7:9
   |
7  | #![deny(deprecated)]
   |         ^^^^^^^^^^
   = note: this error originates in the attribute macro `mask_all` (in Nightly builds, run with -Z macro-backtrace for more info)
